# day7

./: README.md  requirements.txt
cpp/: CMakeLists.txt  data_collector.cpp  data_collector.h
python/: alerts.py  logger.py  tui.py
